--- a/02-visualize.Rmd
+++ b/02-visualize.Rmd
@@ -76,19 +76,14 @@ library(hrbrthemes)
 
 ## Import data 
 
-This data came from a UK e-commerce dataset from the [UCI Machine Learning Laboratory](https://archive.ics.uci.edu/ml/datasets/online+retail) and the [kushy cannabis data set](https://github.com/kushyapp/cannabis-dataset). 
+These data came from the [kushy cannabis data set](https://github.com/kushyapp/cannabis-dataset). 
 
 ```{r import-CannabisData, message=FALSE, warning=FALSE}
 # fs::dir_tree("data/processed/")
-CannabisData <- readr::read_rds("data/processed/2020-04-24/2020-04-24-CannabisWowData.rds")
+CanData <- readr::read_rds("data/processed/2020-06-27-KushyWowData.rds")
 ```
 
-First we remove all variables that contain the `prod`.
-
 ```{r check-glimpse}
-CanData <- CannabisData %>% 
-  # remove product data
-  dplyr::select(-dplyr::contains("prod")) 
 CanData %>% dplyr::glimpse(78)
 ```
 
@@ -114,56 +109,58 @@ ggplot2::theme_set(hrbrthemes::theme_ipsum_rc(
 
 These are the most common brands categories. First we create the data...
 
-```{r visualize-brand_category}
+```{r visualize-ProdCatTop10}
 CanData %>% 
-  dplyr::count(brand_category, sort = TRUE) %>% 
+  dplyr::count(product_category, sort = TRUE) %>% 
   utils::head(10) %>% 
-  dplyr::mutate(brand_category = reorder(brand_category, n)) -> BrandCatTop10
+  dplyr::mutate(product_category = reorder(product_category, n)) -> ProdCatTop10
 
-# export BrandCatTop10 -----
-readr::write_rds(x = BrandCatTop10, 
+# export ProdCatTop10 -----
+readr::write_rds(x = ProdCatTop10, 
           path = paste0("data/processed/", 
                         base::noquote(lubridate::today()),
-                        "-BrandCatTop10.rds"))
-# export BrandCatTop10 -----
-write_csv(as.data.frame(BrandCatTop10), 
+                        "-ProdCatTop10.rds"))
+# export ProdCatTop10 -----
+write_csv(as.data.frame(ProdCatTop10), 
           path = paste0("data/processed/", 
                         base::noquote(lubridate::today()),
-                        "-BrandCatTop10.csv"))
+                        "-ProdCatTop10.csv"))
 ```
 
-Now we graph the brands
+Now we graph the product categories
 
-```{r gg_top10_brand_categories}
+```{r gg_top10_product_categories}
 # define labels ----
-top_10brand_labs <- ggplot2::labs(x = "Brands",
+top_10product_labs <- ggplot2::labs(x = "Product Categories",
                              
                   y = "Count",
                   
-                  title = "Top 10 Cannabis Brands")
+                  title = "Top 10 Cannabis Products")
 
-BrandCatTop10 %>% 
+ProdCatTop10 %>% 
   
-  ggplot2::ggplot(aes(x = brand_category, 
+  ggplot2::ggplot(aes(x = product_category, 
                       y = n)) +
-    ggplot2::geom_col(aes(fill = brand_category), 
+  
+    ggplot2::geom_col(aes(fill = product_category), 
+                      
                       show.legend = FALSE) +
 
     ggplot2::coord_flip() +
     
-    top_10brand_labs -> gg_top10_brand_categories
+    top_10product_labs -> gg_top10_product_categories
 
-gg_top10_brand_categories
+gg_top10_product_categories
 ```
 
 Convert this to a plotly object. 
 
-```{r hide_legend-toWebGL-ggplotly}
+```{r hide_legend-toWebGL-ggplotly, message=FALSE, warning=FALSE}
 plotly::hide_legend(plotly::toWebGL(
-      plotly::ggplotly(p = gg_top10_brand_categories)))
+      plotly::ggplotly(p = gg_top10_product_categories)))
 ```
 
-This tells me `Concentrates` are the most common brand category. I can also see `Flower` and `Edibles` are numbers two and three. 
+This tells me `Concentrate` are the most common brand category. I can also see `Edibles` and `Vapes` are numbers two and three. 
 
 ## Top 10 Cannabis Brands
 
@@ -171,9 +168,9 @@ These are the most common product categories, sorted with the most common first.
 
 ```{r visualize-Top10Brands}
 CanData %>% 
-  dplyr::count(brand) %>%
+  dplyr::count(brand_name) %>%
   utils::head(10) %>% 
-  dplyr::mutate(brand = reorder(brand, n)) -> Top10Brands
+  dplyr::mutate(brand_name = reorder(brand_name, n)) -> Top10Brands
 
 # export Top10Brands -----
 readr::write_rds(x = Top10Brands, 
@@ -198,10 +195,10 @@ top_10brand_labs <- ggplot2::labs(x = "Brands",
                   title = "Top 10 Cannabis Brands") 
 
 Top10Brands %>%
-  ggplot2::ggplot(aes(x = brand, 
+  ggplot2::ggplot(aes(x = brand_name, 
                       y = n)) +
   
-    ggplot2::geom_col(aes(fill = brand), 
+    ggplot2::geom_col(aes(fill = brand_name), 
                       show.legend = FALSE) +
   
 
@@ -214,7 +211,7 @@ gg_top10_brands
 
 Convert to plotly
 
-```{r gg_top10_brands-plotly}
+```{r gg_top10_brands-plotly, warning=FALSE, message=FALSE}
 plotly::hide_legend(plotly::toWebGL(
       plotly::ggplotly(p = gg_top10_brands)))
 ```
@@ -225,14 +222,14 @@ Now we can group these two variables and count them both, limiting this to the t
 
 ```{r top25-brand-categories}
 Top25Data <- CanData %>%
-  dplyr::count(brand, brand_category) %>%
+  dplyr::count(brand_name, product_category) %>%
   dplyr::arrange(desc(n)) %>% 
-  dplyr::rename(brand_cat_count = n) %>% 
-  dplyr::filter(brand_category %in% c("Concentrates", "Edibles", 
-                                      "Flower", "Medical")) %>% 
+  dplyr::rename(brand_prod_count = n) %>% 
+  dplyr::filter(product_category %in% c("Concentrate", "Edibles", 
+                                      "Vapes", "Shatter")) %>% 
   utils::head(25) %>% 
-  dplyr::mutate(brand = reorder(x = brand, 
-                                X = brand_cat_count))
+  dplyr::mutate(brand = reorder(x = brand_name, 
+                                X = brand_prod_count))
 
 # export Top25Data -----
 readr::write_rds(x = Top25Data, 
@@ -248,7 +245,7 @@ readr::write_csv(as.data.frame(Top25Data),
 
 This plot was removed from the dashboard in version 0.0.4
 
-```{r geom-col-Top25Data}
+```{r geom-col-Top25Data, message=FALSE, warning=FALSE}
 # define labels ----
 top_25_labs <- ggplot2::labs(x = " ",
                              
@@ -259,19 +256,19 @@ top_25_labs <- ggplot2::labs(x = " ",
 # Top25Data col
 Top25Data %>%
       
-    ggplot2::ggplot(aes(x = brand, 
+    ggplot2::ggplot(aes(x = brand_name, 
                       
-                      y = brand_cat_count, 
+                      y = brand_prod_count, 
                       
-                      group = brand_category)) +
+                      group = product_category)) +
       
-    ggplot2::geom_col(aes(fill = brand),
+    ggplot2::geom_col(aes(fill = brand_name),
                       width = -.60, 
                       show.legend = FALSE) +
       
     ggplot2::coord_flip() +
       
-    ggplot2::facet_wrap(. ~ brand_category, 
+    ggplot2::facet_wrap(. ~ product_category, 
                         
                scales = "free") + 
       
@@ -285,31 +282,31 @@ plotly::hide_legend(plotly::toWebGL(
       plotly::ggplotly(p = gg_top_25)))
 ```
 
-## Create Top 100 Brands and Categories 
+## Create Top 75 Categories 
 
-This creates a grouped data.frame/tibble on `brand_category` and `quantity`.
+This creates a grouped data.frame/tibble on `product_category` and `units_sold`.
 
-```{r create-Top100BrandCatsData}
-Top100BrandCatsData <- CanData %>%
+```{r create-GroupedCanData}
+GroupedCanData <- CanData %>%
   # group this by brand categories and quantity
-  dplyr::group_by(brand_category, quantity) %>% 
+  dplyr::group_by(product_category, units_sold) %>% 
   # summarize the sales
-  dplyr::summarise(sales_by_cat = n()) %>% 
+  dplyr::summarise(units_by_prod_cat = n()) %>% 
   # ungroup this data
   dplyr::ungroup() %>% 
   # get the top 100
   dplyr::sample_n(75)
 
-# export Top100BrandCatsData -----
-readr::write_rds(x = Top100BrandCatsData, 
+# export GroupedCanData -----
+readr::write_rds(x = GroupedCanData, 
           path = paste0("data/processed/", 
                         base::noquote(lubridate::today()),
-                        "-Top100BrandCatsData.rds"))
-# export Top100BrandCatsData -----
-write_csv(as.data.frame(Top100BrandCatsData), 
+                        "-GroupedCanData.rds"))
+# export GroupedCanData -----
+write_csv(as.data.frame(GroupedCanData), 
           path = paste0("data/processed/", 
                         base::noquote(lubridate::today()),
-                        "-Top100BrandCatsData.csv"))
+                        "-GroupedCanData.csv"))
 ```
 
 ## Treemap (`highcharter::hctreemap2`)
@@ -332,10 +329,10 @@ thm <-
     )
   )
 
-highcharter::hctreemap2(Top100BrandCatsData, 
-              group_vars = c("brand_category"),
-              size_var = "sales_by_cat", 
-              color_var = "sales_by_cat",
+highcharter::hctreemap2(GroupedCanData, 
+              group_vars = c("product_category"),
+              size_var = "units_by_prod_cat", 
+              color_var = "units_by_prod_cat",
               layoutAlgorithm = "squarified",
               levelIsConstant = FALSE,
               allowDrillToNode = TRUE) %>% 
@@ -354,12 +351,12 @@ The code below creates a `data.frame` that is 'week-over-week', which is not an 
 
 ```{r WeekOverWeek}
 WeekOverWeek <- CanData %>%
-    # get the week_year by quantity
-  select(week_year, quantity) %>%
+    # get the week_year by units_sold
+  select(week_year, units_sold) %>%
     # group these data
   group_by(week_year) %>%
-    # summarize the data by weekly quantity
-  summarize(week_qty = sum(quantity)) %>%
+    # summarize the data by weekly units_sold
+  summarize(week_qty = sum(units_sold)) %>%
     # This introduces the lag function, 
     # Compute a lagged version of a time series, shifting the time base 
     # back by a given number of observations.
@@ -370,12 +367,18 @@ WeekOverWeek <- CanData %>%
     # now we calculate the month, using week_year, abbreviations, and labels
   mutate(month = month(week_year, abbr = TRUE, label = TRUE)) %>%
     # and we group this final data set by the week_year variable
-  group_by(week_year)
-# check this data set
-WeekOverWeek %>% dplyr::glimpse(78)
+  group_by(week_year) %>%
+  # ungroup
+  ungroup()
+
+WeekOverWeek <- WeekOverWeek %>% 
+  dplyr::mutate(invoice_year = if_else(condition = week_year >= lubridate::as_date("2019-01-01"), 
+                                       true = 2019,
+                                       false = 2018))
+WeekOverWeek %>% count(invoice_year)
 ```
 
-Here we see there is a data.frame with 52 rows (one for each week). And this data set is still grouped, but that won't be an issue.
+Here we see there is a data.frame with 54 rows (one for each week). And this data set is still grouped, but that won't be an issue.
 
 ## Plot annual sales (by week)
 
@@ -406,13 +409,8 @@ We will plot these data by quarters:
 
 ```{r create-quar}
 WeekOverWeek <- WeekOverWeek %>% 
-  dplyr::mutate(quar = case_when(
-    month %in% c("Jan", "Feb", "Mar") ~ 1,
-    month %in% c("Apr", "May", "Jun") ~ 2,
-    month %in% c("Jul", "Aug", "Sep") ~ 3,
-    month %in% c("Oct", "Nov", "Dec") ~ 4),
-    # turn into factor
-    quar_fct = factor(quar, 
+  dplyr::mutate(quar = lubridate::quarter(x = week_year),
+                quar_fct = factor(quar, 
                       levels = c(1, 2, 3, 4),
                       labels = c("Q1", "Q2", "Q3", "Q4"),
                       ordered = TRUE))
@@ -451,13 +449,15 @@ labs_wow_annual_sales <- ggplot2::labs(
   subtitle = "Simulated Cannabis Sales Data",
   caption = "Graphic and analysis by PDG") 
 
-WeekOverWeek %>% 
-  # remove missing 
-  tidyr::drop_na() %>% 
+WoWAnnualSales <- WeekOverWeek %>% 
+  # limit range of dates
+  filter(invoice_year == 2018) %>% 
             # filter this by the quarter (which will be in dropdown)
-            dplyr::filter(.data = ., 
-                          
-                          quar == 4) %>% 
+            dplyr::filter(quar == 4) %>% 
+  # remove missing 
+  tidyr::drop_na()
+
+WoWAnnualSales %>% 
   
   # this will put week_year on the x
     ggplot2::ggplot(aes(x = week_year, 
@@ -487,91 +487,11 @@ WeekOverWeek %>%
   labs_wow_annual_sales -> gg_wow_sales
 ```
 
-```{r plotly-gg_wow_sales}
+```{r plotly-gg_wow_sales, message=FALSE, warning=FALSE}
 # Convert this to a `plotly` object.
 plotly::hide_legend(
 plotly::toWebGL(plotly::ggplotly(p = gg_wow_sales,
                                  tooltip = c("x", "y"))))
-```
-
-### Missing December Data
-
-Below are the missing data in December.
-
-```{r missing-dec-19-quantity}
-WeekOverWeek %>% 
-  dplyr::filter(month == "Dec") %>% 
-  dplyr::select(week_year, 
-                wow_quantity)
-```
-
-This shows some missing data in December, and a lot of variation in the sales from month to month. 
-
-### Week over week invoice amount
-
-This will give the user a categorical variable to filter the week over week sales by the amount per invoice.  
-
-```{r WowAmntPerInvoice}
-WowAmntPerInvoice <- CanData %>%
-  
-  # get the week_year by amnt_per_invoice
-  select(week_year, amnt_per_invoice) %>%
-  
-  # group these data by week year
-  group_by(week_year) %>%
-  
-  # summarize the data by weekly quantity
-  summarize(week_amnt_per_inv = sum(amnt_per_invoice)) %>%
-  
-  # This introduces the lag function, "compute a lagged version of a time 
-  # series, shifting the time base back by a given number of observations.
-  mutate(prev_week_amnt_per_inv = lag(week_amnt_per_inv, 1)) %>%
-  
-  # now we get the ratio of the difference between the weekly quantity and 
-  # the previous week, and we divide that by the previous week.
-  mutate(wow_cost_per_inv = (week_amnt_per_inv - prev_week_amnt_per_inv) / 
-                                                     prev_week_amnt_per_inv) %>%
-  
-  # now we calculate the month, using week_year, abbreviations, and labels
-  mutate(month = month(week_year, abbr = TRUE, label = TRUE)) %>%
-  
-  # finally, we group this final data set by the week_year variable
-  group_by(week_year)
-
-# check this data set
-WowAmntPerInvoice %>% glimpse()
-```
-
-
-
-We can see the data are missing for December of 2019. We'll remove this and plot the non-missing data. 
-
-```{r december}
-# labels
-labs_missing_dec <- ggplot2::labs(
-  title = "Week over week sales (December)",
-     y = "Week over week quantity",
-     x = "Week year")
-# plot only December
-WeekOverWeek %>% 
-  dplyr::filter(month == "Dec" & 
-                  !is.na(wow_quantity)) %>% 
-    # this will put week_year on the x
-    ggplot2::ggplot(aes(x = week_year, 
-                        # and the week over week quantity on the y
-                        y = wow_quantity)) +
-  # add the line plot
-    ggplot2::geom_line() +
-  # and the point
-    ggplot2::geom_point() +
-  # the axis title here will inherit the size and color
-    ggplot2::theme(axis.title = element_text(face = c("bold"))) +
-  # this will remove the legend
-    ggplot2::theme(legend.title = element_blank()) +
-  # this adds the percent on the y axis
-    ggplot2::scale_y_continuous(labels = 
-                                  scales::percent_format(accuracy = 1)) + 
-  labs_missing_dec
 ```
 
 ## Quantity sold per week
@@ -587,15 +507,19 @@ WeekOverWeek <- WeekOverWeek %>%
 ```
 
 
-```{r ggWowQuantity}
+```{r ggWowQuantity, message=FALSE, warning=FALSE}
 labs_quantity_per_week <- ggplot2::labs(
          x = "Week", 
          y = "Quantity Sold",
          title = "Quantity Per Week") 
 
-ggWowQuantity <- WeekOverWeek %>%
+QuantityPerWeek <- WeekOverWeek %>%
   # drop missing
     tidyr::drop_na() %>%
+  # filter year
+    dplyr::filter(invoice_year == 2018)
+
+QuantityPerWeek %>% 
   # plot week_year on the x
     ggplot2::ggplot(data = ., 
            aes(x = week_year, 
@@ -608,7 +532,7 @@ ggWowQuantity <- WeekOverWeek %>%
   # add points
     ggplot2::geom_point() +
   # add labs
-    labs_quantity_per_week
+    labs_quantity_per_week -> ggWowQuantity
 
 # convert to plotly
 plotly::toWebGL(plotly::ggplotly(ggWowQuantity))
@@ -632,21 +556,21 @@ Next we create the monthly sales data frame, with the `unit_price`, `quantity`, 
 
 
 ```{r MonthlyLocationSales}
-MonthlyLocationSales <- CannabisData %>% 
+MonthlyLocationSales <- CanData %>% 
     # get the floor_month. location, quantity, and unit_price
     dplyr::select(floor_month, 
                   location, 
-                  quantity,  
-                  unit_price) %>%
+                  units_sold,  
+                  product_price) %>%
+    dplyr::filter(floor_month >= lubridate::as_date("2018-01-01")) %>% 
     # we can create the new location variable
     dplyr::mutate(
-            sales = quantity*unit_price, 
+            sales_per_loc = units_sold*product_price, 
             location = case_when(
-              # Arizona
-              location %in% "Salisbury Postcode Area (UK)" ~ "Arizona",
-              location %in% "Nova Scotia" ~ "Arizona",   
-              location %in% "British Columbia" ~ "Arizona",
-              # Colorado
+              # # Colorado
+              location %in% "Salisbury Postcode Area (UK)" ~ "Colorado",
+              location %in% "Nova Scotia" ~ "Colorado",   
+              location %in% "British Columbia" ~ "Colorado",
               location %in% "Alberta" ~ "Colorado",
               # Oregon
               location %in% "Ontario" ~ "Oregon",        
@@ -660,17 +584,16 @@ MonthlyLocationSales <- CannabisData %>%
     # now we group by the floor_month and location
     dplyr::group_by(floor_month, location) %>%
     # and summarize this by the monthly_sales and median sales
-    dplyr::summarize(total_monthly_sales = sum(sales, na.rm = TRUE), 
-                     median_monthly_sales = median(sales, na.rm = TRUE)) %>%
+    dplyr::summarize(tot_mnth_sale_loc = sum(sales_per_loc, na.rm = TRUE), 
+                     med_mnth_sale_loc = median(sales_per_loc, na.rm = TRUE)) %>%
     # and group it by the floor_month and location
     dplyr::mutate(sales_region = case_when(
-                location == "Colorado" ~ "West/Mountain",
-                location == "Arizona" ~ "West/Mountain",
-                location == "Nevada" ~ "West/Mountain",
+                  location == "Colorado" ~ "West/Mountain",
+                  location == "Nevada" ~ "West/Mountain",
   
-                location == "California" ~ "West/Pacific",
-                location == "Oregon" ~ "West/Pacific",
-                location == "Washington" ~ "West/Pacific"),
+                  location == "California" ~ "West/Pacific",
+                  location == "Oregon" ~ "West/Pacific",
+                  location == "Washington" ~ "West/Pacific"),
               
                 sales_reg_num = case_when(
                 sales_region %in% "West/Pacific" ~ 1,
@@ -678,11 +601,12 @@ MonthlyLocationSales <- CannabisData %>%
   
     dplyr::group_by(floor_month, location)
 # check new data 
-MonthlyLocationSales %>% 
-  # check
-  group_by(sales_region) %>% 
-  count(sales_reg_num) %>% 
-  spread(sales_region, n)
+MonthlyLocationSales <- MonthlyLocationSales %>% 
+  dplyr::mutate(invoice_year = if_else(condition = floor_month >= lubridate::as_date("2019-01-01"), 
+                                       true = 2019,
+                                       false = 2018,
+                                       missing = NA_real_))
+MonthlyLocationSales %>% count(invoice_year)
 ```
 
 This gives us a grouped `data.frame` with 138 rows.  
@@ -700,15 +624,16 @@ labs_monthly_location_sales <- ggplot2::labs(y = 'Total Monthly Sales',
 # plot
 MonthlyLocationSales %>%
     # sort these by total_monthly_sales
-    dplyr::arrange(desc(total_monthly_sales)) %>% 
+    dplyr::arrange(desc(tot_mnth_sale_loc)) %>% 
     # plot this as floor_month vs. monthly sales
-    dplyr::filter(sales_reg_num == 2) %>% 
+    dplyr::filter(sales_reg_num == 2, 
+                  invoice_year == 2018) %>% 
     # plot
     ggplot2::ggplot(data = ., 
                     # month
                     aes(x = floor_month, 
                         # total monthly sales here
-                        y = total_monthly_sales)) +
+                        y = tot_mnth_sale_loc)) +
     # add a line
     ggplot2::geom_line(aes(color = location), show.legend = FALSE) +
     # and a point
@@ -732,8 +657,9 @@ MonthlyLocationSales %>%
                                   vjust = 0.5)) +
     # add labs
     labs_monthly_location_sales -> ggTop100MonthlyLocationSales
+```
 
-
+```{r plotly-ggTop100MonthlyLocationSales, message=FALSE, warning=FALSE}
 # convert to plotly
 plotly::hide_legend(
   plotly::toWebGL(
@@ -755,20 +681,20 @@ labs_median_order_value <- ggplot2::labs(
 # plot
 ggMedianOrderValue <- MonthlyLocationSales %>%
     # sort these by median_sales
-    dplyr::arrange(desc(median_monthly_sales)) %>% 
+    dplyr::arrange(desc(med_mnth_sale_loc)) %>% 
 
-    # plot this as sales_reg_num is Western/Mountain
-    dplyr::filter(sales_reg_num == 1) %>% 
+    # plot this as sales_reg_num is Western/Mountain and 2018
+    dplyr::filter(sales_reg_num == 1 & invoice_year == 2018) %>% 
     # plot
     ggplot2::ggplot(data = ., 
                     # put months on the x 
            mapping = aes(x = floor_month, 
                          # median monthly sales
-                         y = median_monthly_sales)) +
+                         y = med_mnth_sale_loc)) +
     # add the line
-    ggplot2::geom_line() +
+    ggplot2::geom_line(aes(color = location), show.legend = FALSE) +
     # add the point
-    ggplot2::geom_point() +
+    ggplot2::geom_point(aes(color = location), show.legend = FALSE) +
     # add the y format
     ggplot2::scale_y_continuous(labels = 
                                     scales::dollar_format(accuracy = 1)) +
